Lab1/1_cholesky/out_cholesky_175427.err
cholesky.c: In function ‘cholesky_openmp’:
cholesky.c:46:13: error: initializer expression refers to iteration variable ‘i’
     #pragma omp parallel for collapse(2)
             ^~~
cholesky.c:80:9: error: collapsed loops not perfectly nested before ‘U’
         U[i][i] = sqrt(A[i][i]-tmp);
         ^
cholesky.c:92:50: error: expected ‘;’ before ‘}’ token
             U[i][j] = ( A[j][i] - tmp ) / U[i][i]
                                                  ^
                                                  ;
         }
         ~                                         
cholesky.c:104:26: error: ‘collapse’ is not valid for ‘#pragma omp parallel’
     #pragma omp parallel collapse(4)
                          ^~~~~~~~
cholesky.c:123:13: error: expected ‘,’ or ‘;’ before ‘#pragma’
     #pragma omp parallel for collapse(6)
             ^~~
cholesky.c:124:30: error: expected ‘;’ before ‘)’ token
     for(k=0; k<n; k+=tilesize){
                              ^
                              ;
cholesky.c:124:30: error: expected statement before ‘)’ token
cholesky.c:143:26: error: ‘collapse’ is not valid for ‘#pragma omp parallel’
     #pragma omp parallel collapse(4)
                          ^~~~~~~~
cholesky.c: In function ‘cholesky’:
cholesky.c:246:22: error: expected ‘;’ before ‘for’
             tmp = 0.0
                      ^
                      ;
             for(k=0;k<i;k++) {
             ~~~       
make: *** [Makefile:7: all] Error 1
